# improved

./: .gitignore  EMA.py  LICENSE  README.md  Untitled1.ipynb  Untitled2.ipynb  Untitled4.ipynb  autoencoder-test.ipynb  bCR.ipynb  cifar10-cifar10-fix-1.txt  cifar10-cifar10-fix.txt  cifar10-kl-f2-4.txt  ddgan_run.sh  dev.toml  diffit.py  diffusion.py  env.yaml  experiment.ipynb  extract.sh  extract_features.py  fid_test_cifar10.py  get_args.py  how_to_run_accelerate.txt  how_to_setup_environment.md  iddgan-DiT.ipynb  iddgan_run.sh  image_test.ipynb  kl-Copy1.ipynb  kl-amp.ipynb  kl.ipynb  models_fix.py  pyproject.toml  requirements.txt  run.sh  sample.py  setup.py  test-celeba.sh  test-cifar10-dit.sh  test-cifar10-gen-speed.sh  test-cifar10.sh  (+40 more)
autoencoder/config/: CELEBA_config.yaml  COCO_config.yaml  LSUN_config.yaml  afhq-cat-kl-f4.yaml  vq-f2.yaml  vq-f4.yaml  vq-f8.yaml
datasets_prep/: afhq.py  ahfq.py  coco.py  dataset.py
diffusions/: gaussian_diffusion.py
ldm/models/: autoencoder.py
ldm/modules/diffusionmodules/: model.py
ldm/modules/encoders/: modules.py
notebooks/: CelebA-TEST-KL.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  Untitled4.ipynb  bCR.ipynb  dit-iddgan-DiT.ipynb  experiment.ipynb  kl-Copy1.ipynb  kl-amp.ipynb  kl.ipynb  test-fid.ipynb  train.ipynb  vq-Copy1.ipynb  vq-bCR.ipynb  vq.ipynb  vq2.ipynb
pytorch_fid/: convert_to_numpy.py  fid_score.py  inception.py  inception_score.py  inception_score_pytorch.py  inception_score_tf2.py
score_sde/models/: discriminator.py  layers.py  layerspp.py  ncsnpp_generator_adagn.py  up_or_down_sampling.py  utils.py
score_sde/op/: fused.cu  fused_act.py  fused_bias_act_pytorch.py  test.py  upfirdn2d.py  upfirdn2d_pytorch.py
scripts/: download_firststage.py
