[project]
name = "improved-ddgan"
version = "0.1.0"
description = "Improved DDGAN"
dependencies = [
    "torch==1.8.0+cu111",
    "torchvision==0.9.0+cu111",
    "ftfy",
    "regex",
    "tqdm",
    "clip @ git+https://github.com/openai/CLIP.git",
    "pillow",
    "matplotlib",
    "tensorboard",
    "tensorboardx",
    "lmdb",
    "scipy",
    "ninja",
    "einops",
    "pywavelets",
    "cython",
    "huggingface-hub",
    "pycocotools",
    "omegaconf",
    "pytorch-lightning",
    "diffusers",
    "transformers",
    "kornia",
    "jupyter",
    "wandb",
    "requests",
    "ipykernel",
]
readme = "README.md"
requires-python = ">= 3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "jupyter>=1.1.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/improved_ddgan"]

[[tool.rye.sources]]
name = "torch"
url = "https://download.pytorch.org/whl/torch_stable.html"
type = "find-links" 
